--- a/style.css
+++ b/style.css
@@ -3,11 +3,15 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Lora', serif;
+html {
     background-image: linear-gradient(45deg, rgb(0, 116, 90), rgb(41, 55, 255));
     background-repeat: no-repeat;
-    height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
+}
+
+body {
+    font-family: 'Lora', serif;
     overflow-x: hidden;
     color: white;
 }
@@ -27,7 +31,7 @@ body {
     margin: 1em 3em;
 }
 
-input[type=text], input[type=date], select, #steps, #status {
+input[type=text], input[type=date], select,  #status {
     width: 100%;
     border: none;
     border-radius: 5px;
@@ -78,16 +82,6 @@ tr:nth-child(even) {
     background-color: rgba(143, 150, 255, 0.3);
 }
 
-
-table #steps:hover {
-    cursor: pointer;
-    background-color: rgba(143, 150, 255, 0.3);
-    color: white;
-    border: 1px white solid;
-    padding: .2em;
-} 
-
-
 table #status {
     border: none;
     font-family: inherit;
@@ -100,3 +94,20 @@ table #status:hover {
     cursor:pointer;
 }
 
+.delete {
+    text-align: center;
+    border: none;
+    font-family: inherit;
+    background-color: rgb(255, 44, 44);
+    color: white;
+    padding: .3em .6em;
+    border-radius: 5px;
+    width: 50%;
+    margin: auto;
+    display: inline-block;
+    margin-bottom: 1em;
+}
+
+a {
+    text-decoration: none;
+}
